--- a/rumenmine/webapp/resources/web.properties
+++ b/rumenmine/webapp/resources/web.properties
@@ -58,7 +58,7 @@ links.blog = http://blog.flymine.org
 
 # search box
 begin.searchBox.title = Search
-begin.searchBox.description = Search FlyMine. Enter <strong>names</strong>, <strong>identifiers</strong> \
+begin.searchBox.description = Search RumenMine. Enter <strong>names</strong>, <strong>identifiers</strong> \
 or <strong>keywords</strong> for genes, proteins, pathways, ontology terms, authors, etc. (e.g. \
 <em>eve</em>, HIPPO_DROME, glycolysis, <em>hb</em> allele).
 
@@ -77,8 +77,8 @@ begin.listBox.description = Enter a <strong>list</strong> of identifiers.
 # third box
 begin.thirdBox.title = First Time Here?
 begin.thirdBox.visitedTitle = Welcome Back!
-begin.thirdBox.description = FlyMine integrates many types of data for <em>Drosophila</em>, \
-<em>Anopheles</em> and other organisms. You can run flexible queries, export results and analyse lists of \
+begin.thirdBox.description = RumenMine integrates many types of data for microorganisms in the rumen. \
+You can run flexible queries, export results and analyse lists of \
 data.
 begin.thirdBox.link = http://www.flymine.org/help/tour/start.html
 begin.thirdBox.linkTitle = Take a tour
@@ -86,21 +86,19 @@ begin.thirdBox.linkTitle = Take a tour
 
 # popular templates in tabs, template category (key identifier)
 begin.tabs.1.id = Genes
-begin.tabs.1.description = The gene models and other genome annotation in FlyMine are provided by a variety \
-of source databases including: FlyBase, UniProt, Ensembl and over 30 other data sources.
+begin.tabs.1.description = The gene models and other genome annotation in RumenMine are provided by a variety \
+of source databases including: UniProt, Ensembl and over 30 other data sources.
 begin.tabs.2.id = Interactions
-begin.tabs.2.description = FlyMine loads physical interactions from IntAct and BioGRID and genetic \
-interactions from FlyBase.
+begin.tabs.2.description = RumenMine loads physical interactions from IntAct and BioGRID.
 begin.tabs.3.id = Homology
-begin.tabs.3.description = FlyMine loads homologue predictions from Ensembl, KEGG and TreeFam.
+begin.tabs.3.description = RumenMine loads homologue predictions from Ensembl, KEGG and TreeFam.
 begin.tabs.4.id = Function
-begin.tabs.4.description = FlyMine loads Gene Ontology annotation from MGI, FlyBase, WormBase, UniProt, \
+begin.tabs.4.description = RumenMine loads Gene Ontology annotation from MGI, FlyBase, WormBase, UniProt, \
 SGD, and InterPro; domain data from InterPro; disease data from OMIM; and pathways data from Reactome and KEGG.
 begin.tabs.5.id = Regulation
-begin.tabs.5.description = FlyMine loads transcriptional regulation data from FlyBase and REDFly.
+begin.tabs.5.description = RumenMine loads transcriptional regulation data from FlyBase and REDFly.
 begin.tabs.6.id = Expression
-begin.tabs.6.description = FlyMine loads gene expression data for Drosophila melanogaster and Anopheles \
-gambiae from FlyAtlas, BDGP, ArrayExpress and Fly-FISH.
+begin.tabs.6.description = RumenMine loads gene expression data from ArrayExpress.
 
 begin.listsBox.description = You can run queries on whole lists of data. Create lists from the results of a query \
 or by uploading identifiers. Click on a list to view graphs and summaries in a list analysis page, if you log in \
