--- a/rumenmine/webapp/resources/web.properties
+++ b/rumenmine/webapp/resources/web.properties
@@ -112,12 +112,13 @@ genomicRegionSearch.resultsJavascript =
 genomicRegionSearch.optionsCss =
 genomicRegionSearch.resultsCss =
 # Make sure pre-defined organisms have chromosome location information in the database
-genomicRegionSearch.defaultOrganisms = P. falciparum 3D7
+genomicRegionSearch.defaultOrganisms = Bacteroides thetaiotaomicron
 # Exclude feature types for all organisms, comma separated
 genomicRegionSearch.featureTypesExcluded.global = YouNameItClass
 # Exclude feature types for each specific organism
-genomicRegionSearch.featureTypesExcluded.byOrganism = P. falciparum 3D7:YouNameItClass;
-genomicRegionSearch.defaultSpans = MAL1:29733..37349\\nMAL1:393758..394189\\nMAL9:1495567..1503324
+#genomicRegionSearch.featureTypesExcluded.byOrganism = P. falciparum 3D7:YouNameItClass;
+genomicRegionSearch.defaultSpans = gnl|X|AAGFMODC_1:425..1000\\ngnl|X|AAGFMODC_3:30000..34220\\ngnl|X|GBEKNBMO_1:3105000..3106000
+
 genomicRegionSearch.caption = Search for features that overlap a list of genome coordinates you enter or upload, e.g. <b>MAL1:29733..37349</b>
 
 genomicRegionSearch.howTo = <ul>\
@@ -143,3 +144,9 @@ genomicRegionSearch.exportChromosomeSegment = true
 #    <form-property name="strandSpecific" type="java.lang.Boolean"/>
 # </form-bean>
 genomicRegionSearch.enableStrandSpecificSearch = true
+
+# useful for organism report
+web.templates.expandonload=true
+
+
+
