links to dev cdn now (not local server)

--- a/humanmine/webapp/resources/web.properties
+++ b/humanmine/webapp/resources/web.properties
@@ -2,6 +2,8 @@
 # The contents of this file are read into a Properties object that is stored
 # as the WEB_PROPERTIES attribute in the Context
 
+head.cdn.location = http://cdn-dev.intermine.org
+
 
 # Header - these will populate the top right navigation
 header.links=help,about,cite,software
